# Semantic-kernel-demo

./: .env.example  00-intro_multiagent.py  01-basic_utilisation_dalle.py  01-basic_utilisation_llm.py  02-plugins.py  03-processes.py  04-smolagents.py  README.md  pyproject.toml  requirements-smolagents.txt  requirements.txt  telemetry.py
